add_executable(RaverieEditor)

raverie_setup_library(RaverieEditor ${CMAKE_CURRENT_LIST_DIR} TRUE)

target_sources(RaverieEditor
  PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}/VirtualFileSystem.cpp
    ${CMAKE_CURRENT_LIST_DIR}/GameOrEditorStartup.cpp
    ${CMAKE_CURRENT_LIST_DIR}/GameOrEditorStartup.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Main.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Wasi.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ZeroCrashCallbacks.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ZeroCrashCallbacks.hpp
)

target_link_libraries(RaverieEditor
  PUBLIC
    Assimp
    Common
    Content
    EditorCore
    Engine
    FreeType
    Gameplay
    Geometry
    Graphics
    Libpng
    Meta
    Networking
    Nvtt
    Opus
    Physics
    Platform
    RendererBase
    RendererImpl
    Replication
    Scintilla
    Serialization
    Sound
    SpatialPartition
    SpirvCross
    SpirvHeaders
    SpirvTools
    Support
    UiWidget
    Widget
    ZLib
    Zilch
    ZilchScript
    ZilchShaders
    Exceptions
)
