add_library(Meta)

raverie_setup_library(Meta ${CMAKE_CURRENT_LIST_DIR} TRUE)

target_sources(Meta
  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/AttributeExtension.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AttributeExtension.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CommonHandleManagers.cpp
    ${CMAKE_CURRENT_LIST_DIR}/CommonHandleManagers.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Event.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Event.hpp
    ${CMAKE_CURRENT_LIST_DIR}/HandleManagers.hpp
    ${CMAKE_CURRENT_LIST_DIR}/LocalModifications.cpp
    ${CMAKE_CURRENT_LIST_DIR}/LocalModifications.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaArray.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaArray.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaBindingExtensions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaBindingExtensions.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaComposition.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaComposition.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaDatabase.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaDatabase.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaEditorExtensions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaEditorExtensions.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaHandles.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaHandles.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaLibraryExtensions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaLibraryExtensions.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaMath.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaMath.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaSelection.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaSelection.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaStandard.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MetaStandard.hpp
    ${CMAKE_CURRENT_LIST_DIR}/NativeTypeConversion.cpp
    ${CMAKE_CURRENT_LIST_DIR}/NativeTypeConversion.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Notification.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Notification.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Object.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Object.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ObjectRestoreState.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.hpp
    ${CMAKE_CURRENT_LIST_DIR}/PropertyHandle.cpp
    ${CMAKE_CURRENT_LIST_DIR}/PropertyHandle.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Tags.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ThreadSafeReferenceCounted.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ThreadSafeReferenceCounted.hpp
    ${CMAKE_CURRENT_LIST_DIR}/VariantTypes.inl
    ${CMAKE_CURRENT_LIST_DIR}/ZeroMetaArray.hpp
)

raverie_target_includes(Meta
  PUBLIC
    Zilch
)
